--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.25.0",
+    "chart.js": "^3.7.1",
+    "chartjs": "^0.3.24",
     "material-ui": "^0.20.2",
     "react": "^17.0.2",
+    "react-chartjs-2": "^4.0.1",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.1",
     "react-scripts": "4.0.3",
