--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
     "chart.js": "^3.7.1",
     "chartjs": "^0.3.24",
     "material-ui": "^0.20.2",
+    "papaparse": "^5.3.1",
     "react": "^17.0.2",
     "react-chartjs-2": "^4.0.1",
+    "react-csv": "^2.2.2",
     "react-dom": "^17.0.2",
+    "react-papaparse": "^4.0.2",
     "react-router-dom": "^6.2.1",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
