[Fix] Migration and Register

--- a/package.json
+++ b/package.json
@@ -12,15 +12,25 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.25.0",
+    "bcrypt": "^5.0.1",
+    "bcryptjs": "^2.4.3",
     "chart.js": "^3.7.1",
     "chartjs": "^0.3.24",
+    "fs": "^0.0.1-security",
     "material-ui": "^0.20.2",
+    "node-sass": "^6.0.1",
     "papaparse": "^5.3.1",
+    "pdf-lib": "^1.17.1",
+    "pdf-parse": "^1.1.1",
+    "pdf2json": "^2.0.0",
+    "pdfreader": "^1.2.14",
     "react": "^17.0.2",
     "react-chartjs-2": "^4.0.1",
     "react-csv": "^2.2.2",
     "react-dom": "^17.0.2",
+    "react-file-reader": "^1.1.4",
     "react-papaparse": "^4.0.2",
+    "react-pdf": "^5.7.1",
     "react-router-dom": "^6.2.1",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
